--- a/ansible/roles/init/tasks/main.yml
+++ b/ansible/roles/init/tasks/main.yml
@@ -13,7 +13,8 @@
 
 - name: Add ppa Repository
   sudo: yes
-  apt_repository: repo=ppa:ondrej/{{ php_ppa }}
+  apt_repository: repo="deb http://packages.dotdeb.org wheezy all" state=present
+  apt_repository: repo="deb-src http://packages.dotdeb.org wheezy all" state=present
 
 - name: Update apt
   sudo: yes
