--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,9 +1,7 @@
 ---
-- hosts: all
+- hosts: devbox
   sudo: true
   vars:
-    web_server: nginxphp
-    servername: ymajd-vm 11.11.11.17
     timezone: Europe/Paris
   vars_files:
     - vars/mysql.yml
