--- a/ansible/vars/nginxphp.yml
+++ b/ansible/vars/nginxphp.yml
@@ -4,3 +4,10 @@
 ws_vhost_path: /etc/nginx/sites-available
 ws_vhost_file: default
 ws_template: default.tpl
+
+nginx_domain: dev.local
+nginx_home: /var/www
+nginx_user: www-data
+nginx_group: www-data
+nginx_fcgi: 9000
+nginx_pool: default
