--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -10,9 +10,7 @@
   roles:
     - init
     - nginx
-    - php5-cli
-    - php5-fpm
+    - php
     - mysql
     - composer
-    - phpcommon
     - app
