--- a/ansible/roles/init/files/smb.conf
+++ b/ansible/roles/init/files/smb.conf
@@ -206,7 +206,7 @@ aio write size =1
 read raw = No
 write raw = Yes
 
-[wwwdev]
+[www]
 public          = yes
 writable        = yes
 comment         = www directory
