--- a/ansible/roles/php/files/custom.cli.php.ini
+++ b/ansible/roles/php/files/custom.cli.php.ini
@@ -39,7 +39,7 @@ upload_max_filesize = 12M
 
 ; Defines the default timezone used by the date functions
 ; http://php.net/date.timezone
-date.timezone = "Europe/Paris"
+date.timezone = "{{timezone}}"
 
 ; Maximum amount of memory a script may consume (128MB)
 ; http://php.net/memory-limit
