--- a/ansible/roles/init/files/.gitconfig
+++ b/ansible/roles/init/files/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = Your name
-    email = your@mail.com
+    name = {{gitusername}}
+    email = {{gitemail}}
 [alias]
     co = checkout
     ci = commit -s
