Conf user s permissions and fix missing quotes

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,6 +2,7 @@
 - hosts: devbox
   sudo: true
   vars:
+    user: vagrant
     timezone: Europe/Paris
     servername: dev.local
     gitusername: YourName
