--- a/ansible/vars/nginxphp.yml
+++ b/ansible/vars/nginxphp.yml
@@ -4,6 +4,8 @@
 ws_vhost_path: /etc/nginx/sites-available
 ws_vhost_file: default
 ws_template: default.tpl
+# If you need a Symfony2 vhost ready
+#ws_template: symfony_vhost.tpl
 
 nginx_domain: {{servername}}
 nginx_home: /var/www
