--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,6 +7,7 @@
     servername: dev.local
     gitusername: YourName
     gitemail: your@email.com
+    hostname: devbox
   vars_files:
     - vars/mysql.yml
     - vars/common.yml
