--- a/ansible/roles/init/files/smb.conf
+++ b/ansible/roles/init/files/smb.conf
@@ -211,8 +211,8 @@ public          = yes
 writable        = yes
 comment         = www directory
 path            = /var/www
-force user      = www-data
-force group     = www-data
+force user      = vagrant
+force group     = vagrant
 create mask     = 0775
 directory mask  = 0775
 follow symlinks = yes
