--- a/ansible/roles/init/tasks/main.yml
+++ b/ansible/roles/init/tasks/main.yml
@@ -13,6 +13,11 @@
     - { path: '/.vimrc', dest: '/.vimrc', mode: 644 }
     - { path: '/authorized_keys', dest: '/.ssh/authorized_keys', mode: 600 }
 
+- name: copy root vimrc file
+  copy: src=../files{{ item.path }} dest=/root/{{ item.dest }} owner=root group=root
+  with_items:
+    - { path: '/.vimrc', dest: '/.vimrc', mode: 644 }
+
 - name: add/check wheezy stable
   apt_repository: repo='deb http://ftp.de.debian.org/debian stable main contrib non-free' state=present
 
@@ -104,7 +109,7 @@
   command: /etc/init.d/samba reload
 
 - name: ensure smbuser with default pw
-  raw:  (echo "www-data"; echo "www-data") | smbpasswd -s -a www-data
+  raw:  (echo "{{user}}"; echo "{{user}}") | smbpasswd -s -a {{user}}
 
 - name: copy sudoers file for safety
   command: cp -f /etc/sudoers /etc/sudoers.tmp
