--- a/ansible/roles/php/files/dev.local.conf
+++ b/ansible/roles/php/files/dev.local.conf
@@ -1,7 +1,7 @@
 [dev.local]
 listen = 127.0.0.1:9000
-user = www-data
-group = www-data
+user = vagrant
+group = vagrant
 request_slowlog_timeout = 5s
 slowlog = /var/log/php-fpm/slowlog-dev.local.log
 listen.allowed_clients = 127.0.0.1
