--- a/ansible/roles/php/tasks/main.yml
+++ b/ansible/roles/php/tasks/main.yml
@@ -39,10 +39,14 @@
 - name: copy configs
   action: copy src=../files{{item.path}} dest={{item.dest}} mode={{item.mode}}
   with_items:
-    - { path: '/custom.php.ini', dest: '/etc/php5/fpm/conf.d/custom.php.ini', mode: 644 }
     - { path: '/custom.xdebug.ini', dest: '/etc/php5/fpm/conf.d/custom.xdebug.ini', mode: 644 }
-    - { path: '/custom.cli.php.ini', dest: '/etc/php5/cli/conf.d/custom.php.ini', mode: 644 }
     - { path: '/dev.local.conf', dest: '/etc/php5/fpm/pool.d/dev.local.conf', mode: 644 }
+
+- name: copy php.ini template 1/2
+  template: src=custom.php.ini.tpl dest=/etc/php5/fpm/conf.d/custom.php.ini mode=644
+
+- name: copy php.ini template 2/2
+  template: src=custom.cli.php.ini.tpl dest=/etc/php5/cli/conf.d/custom.php.ini mode=644
 
 - name: create slowlog dir
   action: file path=/var/log/php-fpm/ state=directory
