--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -7,3 +7,6 @@
   sudo: yes
   template: src={{ ws_template }} dest={{ ws_vhost_path }}/{{ ws_vhost_file }}
   notify: restart nginx
+
+- name: fix log permissions
+  command: chown -R {{user}}:{{user}} /var/log/nginx
